--- a/home/index.html
+++ b/home/index.html
@@ -63,7 +63,7 @@
             </div>
 
             <div class="national">
-                <h1>Viaje pelo brasilzão!</h1>
+                <h1>Viaje pelo Brasil!</h1>
 
                 <div class="national-cards">
                     <div class="card7">
